--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,9 @@
 # Don't commit data files
 data/
 
+# Don't commit randomly generated files
+*BPE_*
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
