--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ logs/
 .DS_Store
 
 # Don't commit randomly generated files
-*BPE_*
+# *BPE_*
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
